src/fixtures/errors/callback-error.lua
function f()
  local json = require("@lmb/json")
  return json.decode("{")
end

return f
